--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- 
+    <script src="https://www.paypal.com/sdk/js?client-id=AciwPe7Om2fGUy_SPoWkCtMsxMjk9bwvP53wS6rgBCTAmrVzxxJWHvcoOsxQZuq2rgV-bZWRH5gjvvdi&currency=USD"></script> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
